Add jquey slider

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,5 +19,5 @@ $white-color: #fff;
 
 // Fonts
 
-$sans-serif: 'Space Mono', monospace;
-$serif: 'Neuton', serif;
+$sans-serif: 'Droid Sans', monospace;
+$serif: 'Lora', serif;
