--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,8 @@ body {
 
 header {
   background: $header-color;
-  border-color: $header-color;
+  border-bottom: 4px solid $accent-color;
+  //border-color: $accent-color;
   display: block;
   font-family: $sans-serif;
   height: 120px;
@@ -28,21 +29,30 @@ header {
   z-index: 100;
 }
 
-// .container {
+// .container-fluid {
 //   border: 10px solid $accent-color;
-//   display: flex;
-//   min-height: 10vh;
+//   display: block;
+//   //min-height: 70vh;
+//   margin-left: 20%;
+//   margin-right: 5%;
+//   margin-top: 80px;
 // }
 
+.box {
+  //margin-top: 80px;
+  //padding-top: 20px;
+}
+
 .logo-image {
-  border: 2px solid $header-color;
+  border: 4px solid $accent-color;
+  border-radius: 50%;
   display: block;
-  height: 150px;
+  height: 200px;
   left: 60px;
   //vertical-align: top;
   position: absolute;
   top: 30px;
-  width: 150px;
+  width: 170px;
   z-index: 1000;
 }
 
@@ -50,7 +60,7 @@ header {
   color: $lighter-color;
   display: block;
   font-family: $sans-serif;
-  left: 220px;
+  left: 240px;
   position: absolute;
   top: 40px;
 }
@@ -71,6 +81,7 @@ nav ul {
 }
 
 nav li {
+  color: $lighter-color;
   display: inline-block;
 }
 
@@ -105,8 +116,15 @@ footer {
 }
 
 .wrapper {
+  font-family: $serif;
   margin: 0 auto;
   max-width: 1080px;
-  min-height: 100%;
+  //min-height: 100%;
   padding: 8.5em 5%;
+  border: 10px solid $accent-color;
+  display: block;
+  //min-height: 70vh;
+  //margin-left: 20%;
+  //margin-right: 5%;
+  //margin-top: 80px;
 }
