--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,9 +3,9 @@ $accent-color: #fe5f00;
 //$background-color: #efe7da;
 $background-color: rgba(239, 231, 218, .6);
 $lighter-color: #f9f9f9;
-$contact-text: #f9f9f9;
+$contact-text: rgba(251, 251, 251, .7);
 $header-color: rgba(35, 35, 26, .9);
-$footer-color: #23231a;
+$footer-color: rgb(51, 51, 51);
 $developer-color: #ff8787;
 $peace-color: #fff;
 $love-color: #f00;
