--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,7 +18,7 @@ body {
 
 header {
   background: $header-color;
-  border-bottom: 3px solid $accent-color;
+  border-bottom: 2px solid $accent-color;
   //border-color: $accent-color;
   display: block;
   font-family: $sans-serif;
@@ -44,7 +44,7 @@ header {
 }
 
 .logo-image {
-  border: 3px solid $accent-color;
+  border: 2px solid $accent-color;
   border-radius: 50%;
   display: block;
   height: 200px;
@@ -103,16 +103,27 @@ nav a:hover {
 footer {
   background: $footer-color;
   border-color: $footer-color;
-  bottom: 0;
+  //bottom: 0;
   clear: both;
-  color: $lighter-color;
+  color: $contact-text;
   font-family: $sans-serif;
   font-size: 1em;
   overflow: hidden;
-  padding-top: 50px;
+  padding-bottom: 10px;
+  padding-top: 40px;
   position: absolute;
   text-align: center;
   width: 100%;
+  .left-footer {
+    text-align: left;
+  }
+  .right-footer {
+    text-align: right;
+  }
+  .footer-link {
+    color: $contact-text;
+    text-decoration: none;
+  }
 }
 
 .wrapper {
@@ -121,7 +132,7 @@ footer {
   max-width: 1080px;
   //min-height: 100%;
   padding: 8.5em 5%;
-  border: 10px solid $accent-color;
+  //border: 10px solid $accent-color;
   display: block;
   //min-height: 70vh;
   //margin-left: 20%;
