--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,21 +1,39 @@
 $primary-color: #689b00;
 $accent-color: #fe5f00;
 //$background-color: #efe7da;
-$background-color: rgba(239, 231, 218, .6);
+//$background-color: rgba(239, 231, 218, .6);
+$background-color: #f1f1f1;
 $lighter-color: #f9f9f9;
 $contact-text: rgba(251, 251, 251, .7);
-$header-color: rgba(35, 35, 26, .9);
+$header-text: rgba(255, 255, 255, .8);
+$header-color: rgb(35, 35, 26);
+//$header-color: #993;
 $footer-color: rgb(51, 51, 51);
 $developer-color: #ff8787;
 $peace-color: #fff;
 $love-color: #f00;
-$contrast-color: #00ffc3;
-$text-color: #111;
+//$contrast-color: #00ffc3;
+//$text-color: #111;
+$primary-text-color: #212121;
+$secondary-text-color: #757575;
+$divider-color: #bdbdbd;
 $border-color: rgba(35, 35, 26, .8);
 //$border-color: rgba(34, 34, 34, .05);
 $box-shadow-color: rgba(0, 0, 0, .9);
 $text-shadow-color: rgba(0, 0, 0, .1);
 $white-color: #fff;
+
+// $primary-color-dark: #388e3c;
+// $primary-color: #4caf50;
+// $primary-color-light: #c8e6c9;
+// $primary-color-text: #fff;
+// $accent-color: #ff5722;
+// $primary-text-color: #212121;
+// $secondary-text-color: #757575;
+// $divider-color: #bdbdbd;
+// $background-color: #fbfbfb;
+// $footer-color: rgb(51, 51, 51);
+// $contact-text: rgba(251, 251, 251, .7);
 
 // Fonts
 
