--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -48,12 +48,12 @@ header {
   border: 2px solid $accent-color;
   border-radius: 50%;
   display: block;
-  height: 200px;
+  height: 170px;
   left: 60px;
   //vertical-align: top;
   position: absolute;
   top: 30px;
-  width: 170px;
+  width: 150px;
   z-index: 1000;
 }
 
@@ -101,6 +101,59 @@ nav a:hover {
   text-decoration: none;
 }
 
+.about-text {
+  text-align: justify;
+}
+
+.highlights {
+  padding: 20px 10px;
+  text-align: center;
+}
+
+.specialization {
+  position: relative;
+  height: 150px;
+  width: 150px;
+}
+
+.specialization img {
+  width: 100%;
+  //vertical-align: top;
+}
+
+.specialization:after, .specialization:before {
+    position:absolute;
+    opacity:0;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+}
+
+.specialization:after {
+    content:'\A';
+    width:100%; height:100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .6);
+}
+
+.specialization:before {
+    content: attr(data-content);
+    width: 100%;
+    color: $lighter-color;
+    z-index: 1;
+    bottom: 10%;
+    padding: 4px 10px;
+    text-align: center;
+    font-family: $sans-serif;
+    background: transparent;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+.specialization:hover:after, .specialization:hover:before {
+  opacity: 1;
+}
+
 footer {
   background: $footer-color;
   border-color: $footer-color;
@@ -109,6 +162,7 @@ footer {
   color: $contact-text;
   font-family: $sans-serif;
   font-size: 1em;
+  margin: 0;
   overflow: hidden;
   padding-bottom: 10px;
   padding-top: 40px;
@@ -129,10 +183,10 @@ footer {
 
 .wrapper {
   font-family: $serif;
-  margin: 0 auto;
+  margin: 0;
   max-width: 1080px;
   //min-height: 100%;
-  padding: 8.5em 5%;
+  padding: 5%;
   //border: 10px solid $accent-color;
   display: block;
   //min-height: 70vh;
