Add projects section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -216,6 +216,16 @@ nav a:hover {
   text-align: justify;
 }
 
+.thumbnail-caption {
+  font-family: $sans-serif;
+  text-align: center;
+}
+
+.thumbnail-text {
+  font-family: $serif;
+  text-align: justify;
+}
+
 .highlights {
   padding: 20px 10px;
   text-align: center;
@@ -299,12 +309,13 @@ footer {
 }
 
 .wrapper {
-  display: block;
+  //display: block;
   font-family: $serif;
   margin: 0;
-  max-width: 1080px;
+  //max-width: 1080px;
   //min-height: 100%;
   padding: 5%;
+  position: relative;
   //border: 10px solid $accent-color;
   //min-height: 70vh;
   //margin-left: 20%;
