Fix contact form

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -22,6 +22,7 @@ $border-color: rgba(35, 35, 26, .8);
 $box-shadow-color: rgba(0, 0, 0, .9);
 $text-shadow-color: rgba(0, 0, 0, .1);
 $white-color: #fff;
+$special-background: rgba(0, 0, 0, .7);
 
 // $primary-color-dark: #388e3c;
 // $primary-color: #4caf50;
